--- a/assets/css/style-sobre.css
+++ b/assets/css/style-sobre.css
@@ -1,24 +1,24 @@
 .sobremim {
     display:flex;
     align-items: center;
-    padding: 60px 50px ;
+    padding: 60px 70px ;
     background: var(--background);
     min-height: 100vh;
 }
 .sobremim div h2{
     color: var(--primary);
     font-size:75px;
-    margin:30px;
 }
 .sobremim div p{
     color: white;
     font-size: 16px;
-    margin: 30px;
-    margin-top: 05%;
     text-align: justify;
 }
 @media (max-width: 600px) {
+    .sobremim {
+        padding: 60px 20px ;
+    }
     .sobremim div h2{
-    font-size:50px;
+        font-size:50px;
     }
 }
