--- a/assets/css/style-contato.css
+++ b/assets/css/style-contato.css
@@ -1,13 +1,13 @@
 .contato{
     padding: 60px 70px ;
     background: var(--background);
-    height: 100vh;
+    min-height: 100vh;
     position: relative;
 }
 
 .contato-titulo{
     margin-top: 20px;
-    margin-bottom: 80px;
+    margin-bottom: 35px;
     padding-bottom: 20px;
     color: white;
     font-size: 30px;
