--- a/assets/css/style-sobre.css
+++ b/assets/css/style-sobre.css
@@ -3,8 +3,7 @@
     align-items: center;
     padding: 60px 50px ;
     background: var(--background);
-    /* width: 100vw; */
-    height: 100vh;
+    min-height: 100vh;
 }
 .sobremim div h2{
     color: var(--primary);
