--- a/assets/css/style-navbar.css
+++ b/assets/css/style-navbar.css
@@ -1,7 +1,3 @@
-* {
-    font-family: Poppins;
-}
-
 .menu__wrapper {
     display: flex;
     position: relative;
@@ -16,7 +12,7 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    padding: 0 16px;
+    padding: 0 70px;
     gap: 32px;
     background-color: var(--background);
     height: 60px;
@@ -36,14 +32,9 @@
     flex-direction: row;
     list-style-type: none;
     align-items: center;
-    gap: 24px;
+    gap: 15px;
     padding: 0px;
     background-color: var(--background);
-}
-
-.logo svg {
-    width: 32px;
-    height: 32px;
 }
 
 .navigation>li {
@@ -100,7 +91,9 @@
 }
 
 @media (max-width: 600px) {
-
+    .menu__bar {
+        padding: 0 20px;
+    }
     .navigation {
         display: none;
     }
